[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "async-lcel-question-chain"
version = "0.1.0"
description = "A minimal asynchronous LangChain LCEL question chain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "python-dotenv>=1.2,<2",
]

[dependency-groups]
dev = [
    "build>=1.3,<2",
    "pyright>=1.1.408,<2",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.15,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["async_lcel_question_chain"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["async_lcel_question_chain", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
